tests/NormalTests/paczka1/fuzzy1/83517474.err
Error in line 20: zjOSQoQR8 S929 28,9
Error in line 17: Lgt A946 307,1
Error in line 27: M5vJXBz8jnN S929 39,3
Error in line 34: M5vJXBz8jnN A514 12,3
